--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "async": "^3.2.3",
     "discord-api-types": "^0.31.2",
     "discord.js": "^13.6.0",
+    "mongoose": "^6.9.2",
     "ms": "^2.1.3",
     "quick.db": "^7.1.3",
     "request": "^2.88.2"
